[package]
name = "kvs"
version = "0.1.0"
authors = ["Matias Berny <matias.berny@icloud.com>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
failure = "0.1.5"
clap = "3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
